# lidl-raytracer

cpp/: .gitignore  meson.build
cpp/src/: camera.h  color.h  main.cpp  ray.h  rt_header.h
cpp/src/materials/: dielectric.h  lambertian.h  material.h  metal.h
cpp/src/math/: math.cpp  math.h
cpp/src/objects/: hittable.h  hittable_list.h  sphere.h
rust/raytracer/: Cargo.toml
rust/raytracer/math/: Cargo.toml
rust/raytracer/math/src/: vector.rs
rust/raytracer/src/: camera.rs  color_helper.rs  main.rs  objects.rs  ray.rs  util.rs
